Fix layout issues on program posts

--- a/src/sass/partials/_archives.scss
+++ b/src/sass/partials/_archives.scss
@@ -54,7 +54,7 @@ body.archive {
         color: $darkgrey;
         border-radius: .2rem;
         transition: all .1s ease-in-out;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     
         &:hover,
         &:focus {
@@ -92,10 +92,10 @@ body.archive {
         }
         
         .continue-reading {
-            display: inline;
+            display: inline-block;
             width: auto;
             text-align: left;
-            padding: .5rem 1rem;
+            padding: 1rem 1rem;
         }
         
     }
